Closed Bug 27296 Opened 26 years ago Closed 26 years ago

cannot type text in dialog if mouse is not over it

Categories

(Core :: XUL, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: andreww, Assigned: danm.moz)

Details

(Keywords: platform-parity)

Steps to reproduce: 1) start mozilla 2) hit cmd+L brings up open url window 3) start typing text into dialog 4) as you type, move your mouse out of the dialog (no clicking!) Expected results: You should be able to continue to type, as you have not clicked to change focus Actual results: The keys you hit do not show up in the text field until you move the mouse back over the window. (try pressing a key over and over as you move the mouse in and out of the dialog - you will see the text start , stop, then start up again.) This occurs also in AIM when you hit add group or add buddy. This also occurs in the prefs window (try the navigator home page url field)
There is a general problem with this on Linux, but on Mac it seems to be limited to modal dialogs. reassigning to danm as p3 for m14, cc saari, adding beta1 & pp keywords. If we leave this in the Mac beta we will be denounced as infidels by the faithful.
Assignee: trudelle → danm
Keywords: beta1, pp
Target Milestone: M14
Don't know 'bout Linux. I liked the Mac problem. You know that's been there forever... Modal windows were filtering key events based on mouse position.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
please ignore, massive spam giving jrgm@netscape.com backlog of XPToolkits resolved fixed bugs to verify
QA Contact: paulmac → jrgm
You need to log in before you can comment on or make changes to this bug.