pass all keyboard events in modal event filter. bug 27296. r:pinkerton.